🐛 FIX: email credientials changed

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SERVICE_ID = "service_74hbue1"
-NEXT_PUBLIC_TEMPLATE_ID= "template_wuzr9rp"
-NEXT_PUBLIC_PUBLIC_KEY = "JbQkreCJMVqrrSgPV"
+NEXT_PUBLIC_SERVICE_ID = "service_k9l8ss3"
+NEXT_PUBLIC_TEMPLATE_ID= "template_zg1d8nh"
+NEXT_PUBLIC_PUBLIC_KEY = "PbioAluOu1smh6QhZ"
